--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/static/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- Google Tag Manager -->
-    <script>
+    <!-- Google Tag Manager (currently broken) -->
+    <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -17,43 +17,31 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-MXGWZNB");
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Northwestern Open Data Initiative | NODI aims to give the Northwestern community access to the data that serves them."
     />
+    <meta name="keywords" content="NODI, Northwestern, Open Data, Northwestern Open Data Initiative, Northwestern Data, Northwestern Datasets, Datasets">
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files insid the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Northwestern Open Data Initiative</title>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
+    <!-- Google Tag Manager (noscript) (currently broken) -->
+    <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-MXGWZNB"
         height="0"
         width="0"
         style="display: none; visibility: hidden;"
       ></iframe
-    ></noscript>
+    ></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
